--- a/index4.html
+++ b/index4.html
@@ -9,11 +9,11 @@
   <frameset cols = "750, *">
     <frameset rows = "220, *">
       <frame SRC = "frame1-4.html" name="number">
-      <frame SRC = "i4-frame4.html" name="list">
+      <frame SRC = "frame4-4.html" name="list">
     </frameset>
-      <frame SRC = "i4-frame2.html" name="table">
+      <frame SRC = "frame2-4.html" name="table">
   </frameset>
-    <frame SRC = "i4-frame3.html" name="fio">
+    <frame SRC = "frame3-4.html" name="fio">
    <noframes>
     Sorry, there is not a frame support in your browser.
    </noframes> 
