--- a/index5.html
+++ b/index5.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <table>
-    <tr><td><iframe src="i5-frame1.html" height="220" width="745"></iframe></td><td rowspan=2><iframe src="i5-frame2.html" height="610" width="745"></iframe></td></tr>
-    <tr><td><iframe src="i5-frame4.html" height="380" width="745"></iframe></td></tr>
+    <tr><td><iframe src="frame1-5.html" height="220" width="745"></iframe></td><td rowspan=2><iframe src="frame2-5.html" height="610" width="745"></iframe></td></tr>
+    <tr><td><iframe src="frame4-5.html" height="380" width="745"></iframe></td></tr>
   </table>
-  <iframe src="i5-frame3.html" height="105" width="1500"></iframe>
+  <iframe src="frame3-5.html" height="105" width="1500"></iframe>
 </body>
 </html>
