--- a/index.html
+++ b/index.html
@@ -119,12 +119,36 @@
             <div class="block4">
                 <div class="Top250">
                     <ul class="img_Box_office">
-                        <li><img src="./Images/box1.svg" alt="box"></li>
-                        <li><img src="./Images/box2.svg" alt="box"></li>
-                        <li><img src="./Images/box3.svg" alt="box"></li>
-                        <li><img src="./Images/box4.svg" alt="box"></li>
-                        <li><img src="./Images/box5.svg" alt="box"></li>
-                        <li><img src="./Images/box6.svg" alt="box"></li>
+                        <li><img src="./images/top1.svg" alt="top"></li>
+                        <li><img src="./images/top2.svg" alt="top"></li>
+                        <li><img src="./images/top3.svg" alt="top"></li>
+                        <li><img src="./images/top4.svg" alt="top"></li>
+                        <li><img src="./images/top5.svg" alt="top"></li>
+                        <li><img src="./images/top6.svg" alt="top"></li>
+                    </ul> 
+                </div>
+                <div class="randommovie">
+                    <div class="poster">
+                        <img src="./images/Guardians.svg" alt="img">
+                        <p class="shadow1"></p>
+                        <img src="./images/tag1.svg" class="tag1" alt="tag1">
+                        <img src="./images/tag2.svg" class="tag2" alt="tag1">
+                        <img src="./images/tag3.svg" class="tag3" alt="tag1">
+                        <img src="./images/tag4.svg" class="tag4" alt="tag1">
+                        <img src="./images/tag5.svg" class="tag5" alt="tag1">
+                        <img src="./images/tag6.svg" class="tag6" alt="tag1">
+  
+                        
+                    </div>                
+                </div>
+                <div class="Box_office">
+                    <ul class="img_Box_office">
+                        <li><img src="./images/box1.svg" alt="box"></li>
+                        <li><img src="./images/box2.svg" alt="box"></li>
+                        <li><img src="./images/box3.svg" alt="box"></li>
+                        <li><img src="./images/box4.svg" alt="box"></li>
+                        <li><img src="./images/box5.svg" alt="box"></li>
+                        <li><img src="./images/box6.svg" alt="box"></li>
                     </ul> 
                 </div>
                 <div class="Recently_ciewed">
