--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li class="text-6xl text"><p>Your Dream</p></li>
                   <li class=" max-w-lg mt-16 text-gray-500" ><p>We are always availed to consult on taking your higher</p> <p>education to the next level so you can stay competitive in </p></li>  
                   <li>
-                    <button class="mt-16  bg-indigo-500 flex text-white items-center px-10 py-3 rounded-lg focus:outline-none"onclick="knopka()">
+                    <button class="mt-16  bg-indigo-500 flex text-white items-center px-10 py-3 rounded-lg focus:outline-none" onclick="knopka()">
                        Apply Online <img class="ml-4" src="./Images/arrow.svg" alt="">  
                     </button>
                     <script src="script.js"></script>
@@ -64,14 +64,14 @@
 
     <section>
       <p class="text-center pt-4 os">Our Services</p>
-      <p class="text-center text-2xl text-gray-500 mt-2 ">
+      <p class="text-center text-gray-500 mt-2 ">
         Executive Trade International is an University Application Centre, guiding Bangladeshi students to Australian,<br> 
         British, Canadian and Irish universities! 
       </p>
       <div class="mt-28 flex flex-col items-center">
         <ul class="container mx-36 flex justify-between items-center w-7\/12">
           <li class="">
-            <div id="el1"class="ml-36 rounded-lg border-2 shadow-xl">
+            <div id="el1" class="ml-36 rounded-lg border-2 shadow-xl">
               <img class="pl-8 pt-7" src="./Images/purple.svg" alt="">
               <div class="pl-8 pt-8">
                 <p class="pl-2 fu">Career Counselling</p>
@@ -175,16 +175,17 @@
         </li>
       </ul>
     </div>
+  </section>
     <section class="mt-56">
       <p class="text-center pt-4 os">News</p>
-      <p class="text-center text-2xl text-gray-500 mt-2 ">
+      <p class="text-center text-gray-500 mt-2 ">
         Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. <br>
         Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult. 
       </p>
       <div class="mt-28 flex flex-col items-center">
       <ul class="container mx-36 flex justify-between items-center w-7\/12">
         <li class="">
-          <div id="news1"class="ml-36 rounded-lg border-2 shadow-xl">
+          <div id="news1" class="ml-36 rounded-lg border-2 shadow-xl">
             <img src="./Images/News1.svg" alt="">
             <div class="-mt-28 mb-12 flex flex-col items-center">
               <p class="pl-2 mt-2 text-s text-gray-500"> 
@@ -226,17 +227,17 @@
       </section>
       <section class="mt-52">
         <p class="text-center pt-4 os">Upcoming University Events</p>
-        <p class="text-center text-2xl text-gray-500 mt-2 ">
+        <p class="text-center text-gray-500 mt-2 ">
           Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. <br> 
           Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.
         </p>
         <div class="mt-28 flex flex-col items-center mt-24">
-        <div class="flex justify-between items-center">
+          <div class="flex justify-between items-center">
 
 
           <div class="rounded-lg border-2 shadow-xl mr-12">
             <div class=" flex justify-between items-center">
-           <img class="mt-8 ml-8"src="./Images/24Dec.svg" alt="">
+           <img class="mt-8 ml-8" src="./Images/24Dec.svg" alt="">
            <p class=" mt-2 mr-56">
              Macquarie University, Sydney, <br>
              Australia
@@ -259,7 +260,7 @@
 
         <div class="rounded-lg border-2 shadow-xl">
           <div class=" flex justify-between items-center">
-         <img class="mt-8 ml-8"src="./Images/17Dec.svg" alt="">
+         <img class="mt-8 ml-8" src="./Images/17Dec.svg" alt="">
          <p class=" mt-2 mr-56">
           Federation University, Australia
          </p>
@@ -281,8 +282,8 @@
       <div class="flex flex-col pt-20 items-center">
         <img src="./Images/dots.svg" class="" alt="">
        </div>
+        </div>
       </section>
-
 
       <section class="pb-16 mt-28">
         <p class="text-center pt-4 os">Countries We Cowered</p>
@@ -330,7 +331,7 @@
       </div>
       </section>
   
-      <section id="lastsection"class="pb-16">
+      <section id="lastsection" class="pb-16">
         <p class="text-center pt-24 os">Testimonials</p>
         <p class="text-center text-gray-500 pt-2">Torquem detraxit hosti et quidem faciunt, ut et negent satis esse appetendum, alterum. Si sine causa?<br>
            quae fuerit causa, mox videro; interea hoc epicurus in liberos. </p>
@@ -397,8 +398,7 @@
           Apply Online <img class="ml-4" src="./Images/arrow.svg" alt="">  
           </button>
         </div>
-      </section>
-       
+      </section>  
     </main>
   
     <footer class="flex flex-col items-center">
@@ -409,7 +409,7 @@
             Dhanmondi, Dhaka 1209, Bangladesh.</p>
           <p class="pt-14">© 2020 Executive Trade International.</p>
         </div>
-        <div class=>
+        <div>
           <p class="pt-4">About us</p>
           <p class="pt-4">Responsibilities</p>
           <p class="pt-4">Our Services</p>
@@ -422,7 +422,7 @@
           <p class="pt-4">Terms of Service</p>
         </div>
         <div>
-          <img src="./Images/icons.svg" class="pt-36" alt=>
+          <img src="./Images/icons.svg" class="pt-36" alt="">
         </div>
       </div>
       
